# ShadingLanguageX

./: .gitignore  CHANGELOG.md  README.md
docs/: Proposals.md  (+4 more)
mxslc++/: CMakeLists.txt  README.md  main.cpp
mxslc++/include/: CompileError.h  Span.h  compile.h  parse_args.h
mxslc++/libraries/: stdlib.mxsl
mxslc++/source/: CMakeLists.txt  CompileError.cpp  CompileError.h  DebugInfo.h  Token.cpp  Token.h  TokenReader.cpp  TokenReader.h  TokenType.h  compile.cpp  parse.cpp  parse.h  scan.cpp  scan.h
mxslc++/source/expressions/: Constructor.cpp  Constructor.h  DotExpression.cpp  DotExpression.h  Expression.cpp  Expression.h  ExpressionFactory.cpp  ExpressionFactory.h  FunctionCall.cpp  FunctionCall.h  FunctionCall2.cpp  FunctionCall2.h  Identifier.cpp  Identifier.h  IncrementExpression.cpp  IncrementExpression.h  IndexingExpression.cpp  IndexingExpression.h  Literal.cpp  Literal.h  MethodCall.cpp  MethodCall.h  NamedConstructor.cpp  NamedConstructor.h  NullExpression.cpp  NullExpression.h  ThisExpression.cpp  ThisExpression.h  UnnamedConstructor.cpp  UnnamedConstructor.h  VariableDefinitionExpression.cpp  VariableDefinitionExpression.h
mxslc++/source/expressions/dot_accessors/: DotAccessor.h  FieldAccessor.cpp  FieldAccessor.h  PortAccessor.cpp  PortAccessor.h
mxslc++/source/mtlx/: MtlXSerializer.cpp  MtlXSerializer.h  evaluate_mtlx.cpp  evaluate_mtlx.h  load_mtlx.cpp  load_mtlx.h  mtlx_type_ostream_ops.h  mtlx_utils.cpp  mtlx_utils.h
mxslc++/source/runtime/: Argument.cpp  Argument.h  ArgumentList.cpp  ArgumentList.h  Attribute.cpp  Attribute.h  AttributeList.cpp  AttributeList.h  Field.cpp  Field.h  FieldInfo.cpp  FieldInfo.h  Function.cpp  Function.h  Function2.cpp  Function2.h  InputVariable.cpp  InputVariable.h  ModifierList.cpp  ModifierList.h  Parameter.cpp  Parameter.h  ParameterList.cpp  ParameterList.h  Runtime.cpp  Runtime.h  Scope.cpp  Scope.h  Serializer.h  Type.cpp  Type.h  TypeInfo.cpp  TypeInfo.h  Variable.cpp  Variable.h  Variable2.cpp  Variable2.h  function_utils.cpp  function_utils.h
mxslc++/source/runtime/values/: BasicValue.h  InterfaceValue.h  NodeValue.h  NullValue.h  Value.h
mxslc++/source/runtime/variables/: ChildVariable.cpp  ChildVariable.h  IVariable.cpp  IVariable.h  InVariable.cpp  InVariable.h  RefVariable.h  Variable.cpp  Variable.h
mxslc++/source/statements/: BlockStatement.cpp  BlockStatement.h  ClassDefinition.cpp  ClassDefinition.h  ConstructorDefinition.cpp  ConstructorDefinition.h  DocumentAttribute.cpp  DocumentAttribute.h  ExpressionStatement.cpp  ExpressionStatement.h  ForEachLoop.cpp  ForEachLoop.h  ForRangeLoop.cpp  ForRangeLoop.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionDefinition.h~  FunctionDefinition2.cpp  FunctionDefinition2.h  IfStatement.cpp  IfStatement.h  MultiVariableDefinition.cpp  MultiVariableDefinition.h  NoStatement.h  PrintStatement.cpp  PrintStatement.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  UsingDeclaration.cpp  UsingDeclaration.h  VariableAssignment.cpp  VariableAssignment.h  VariableDefinition.cpp  VariableDefinition.h
mxslc++/source/utils/: common.h  error_utils.cpp  error_utils.h  instantiate_template_types_utils.cpp  instantiate_template_types_utils.h  io_utils.cpp  io_utils.h  parse_args.cpp  str_utils.cpp  str_utils.h  template_utils.h
mxslc++/source/values/: BasicValue.cpp  BasicValue.h  CastValue.h  InterfaceValue.cpp  InterfaceValue.h  NodeValue.cpp  NodeValue.h  NullValue.h  OutputValue.cpp  OutputValue.h  StructValue.h  UnnamedStructValue.h  Value.cpp  Value.h  ValueFactory.cpp  ValueFactory.h
mxslc++/tests/: CMakeLists.txt  error_message_tests.cpp  failure_tests.cpp  groundtruth_tests.cpp  parse_args_tests.cpp  span_tests.cpp  type_tests.cpp
mxslc++/tests/data/error_message/: class010.mxsl  class010.txt  colonop005.mxsl  colonop005.txt  colonop006.mxsl  colonop006.txt  errmsg001.mxsl  errmsg001.txt  errmsg002.mxsl  errmsg002.txt  errmsg003.mxsl  errmsg003.txt  errmsg004.mxsl  errmsg004.txt  errmsg005.mxsl  errmsg005.txt  errmsg006.mxsl  errmsg006.txt  errmsg007.mxsl  errmsg007.txt  errmsg008.mxsl  errmsg008.txt  errmsg009.mxsl  errmsg009.txt  errmsg010.mxsl  errmsg010.txt  errmsg011.mxsl  errmsg011.txt  errmsg012.txt  errmsg013.mxsl  errmsg013.txt  errmsg014.mxsl  errmsg014.txt  errmsg015.mxsl  errmsg015.txt  errmsg016.mxsl  errmsg016.txt  errmsg017.mxsl  errmsg017.txt  errmsg018.mxsl  (+10 more)
mxslc++/tests/data/failure/: funcs001.mxsl  funcs002.mxsl  funcs003.mxsl  if003.mxsl  if004.mxsl  mutable001.mxsl  mutable002.mxsl  mutable003.mxsl  mutable006.mxsl  mutable008.mxsl  mutable009.mxsl  mutable011.mxsl  mutable012.mxsl  out_arg003.mxsl  out_arg004.mxsl  out_arg007.mxsl  out_arg008.mxsl  out_arg010.mxsl
mxslc++/tests/data/groundtruth/: alias010.mtlx  alias010.mxsl  assign001.mxsl  assign002.mtlx  assign002.mxsl  assign003.mtlx  assign003.mxsl  attr001.mtlx  attr001.mxsl  attr002.mtlx  attr002.mxsl  attr003.mtlx  attr003.mxsl  attr004.mtlx  attr004.mxsl  attr005.mtlx  attr005.mxsl  attr006.mtlx  attr006.mxsl  attr007.mtlx  attr007.mxsl  attr008.mtlx  attr008.mxsl  attr009.mtlx  attr009.mxsl  colonop001.mtlx  colonop001.mxsl  colonop002.mtlx  colonop002.mxsl  colonop003.mtlx  colonop003.mxsl  colonop004.mtlx  colonop004.mxsl  dot001.mtlx  dot001.mxsl  dot010.mxsl  dot011.mtlx  dot011.mxsl  funcs.mtlx  funcs001.mtlx  (+100 more)
mxslc++/tests/data/groundtruth/classes/: class003.mtlx  class003.mxsl  class004.mtlx  class004.mxsl  class005.mtlx  class005.mxsl  class006.mtlx  class006.mxsl  class007.mtlx  class007.mxsl  class008.mtlx  class008.mxsl  class009.mtlx  class009.mxsl  class011.mxsl  class012.mtlx  class012.mxsl  class013.mtlx  class013.mxsl  class014.mtlx  class014.mxsl  class020.mtlx  class020.mxsl  class103.mtlx  class103.mxsl  class105.mxsl  class107.mxsl  class108.mxsl  class111.mtlx  class111.mxsl  ctor001.mtlx  ctor001.mxsl  ctor002.mtlx  ctor002.mxsl
mxslc++/tests/data/output/: inc001.mxsl  inc002.mxsl
mxslc++/tests/data/parse_args_tests/: 001.mxsl  001.rsp  002.rsp  003.rsp  004.rsp
mxslc++/tests/utils/: comp_utils.h  data_utils.h
(+255 files in other folders)
