add_library(mxslc_lib
        scan.cpp
        Token.cpp
        TokenReader.cpp
        parse.cpp
        compile.cpp
        CompileError.cpp
        runtime/Runtime.cpp
        runtime/Scope.cpp
        runtime/Argument.cpp
        runtime/ArgumentList.cpp
        runtime/Function.cpp
        runtime/function_utils.cpp
        runtime/Parameter.cpp
        runtime/ParameterList.cpp
        runtime/Type.cpp
        runtime/Field.cpp
        runtime/ModifierList.cpp
        runtime/Variable.cpp
        runtime/InputVariable.cpp
        runtime/Attribute.cpp
        runtime/AttributeList.cpp
        expressions/Expression.cpp
        expressions/FunctionCall.cpp
        expressions/Identifier.cpp
        expressions/Literal.cpp
        expressions/ExpressionFactory.cpp
        expressions/NullExpression.cpp
        expressions/UnnamedConstructor.cpp
        expressions/IndexingExpression.cpp
        expressions/DotExpression.cpp
        expressions/VariableDefinitionExpression.cpp
        expressions/dot_accessors/PortAccessor.cpp
        expressions/dot_accessors/FieldAccessor.cpp
        expressions/IncrementExpression.cpp
        expressions/NamedConstructor.cpp
        expressions/ThisExpression.cpp
        expressions/MethodCall.cpp
        statements/Statement.cpp
        statements/VariableDefinition.cpp
        statements/PrintStatement.cpp
        statements/FunctionDefinition.cpp
        statements/MultiVariableDefinition.cpp
        statements/UsingDeclaration.cpp
        statements/VariableAssignment.cpp
        statements/ForRangeLoop.cpp
        statements/ForEachLoop.cpp
        statements/ExpressionStatement.cpp
        statements/IfStatement.cpp
        statements/BlockStatement.cpp
        statements/DocumentAttribute.cpp
        statements/ClassDefinition.cpp
        utils/io_utils.cpp
        utils/str_utils.cpp
        utils/parse_args.cpp
        utils/error_utils.cpp
        utils/instantiate_template_types_utils.cpp
        mtlx/load_mtlx.cpp
        mtlx/mtlx_utils.cpp
        mtlx/MtlXSerializer.cpp
        mtlx/evaluate_mtlx.cpp
        values/Value.cpp
        values/ValueFactory.cpp
        values/NodeValue.cpp
        values/InterfaceValue.cpp
        values/OutputValue.cpp
        values/BasicValue.cpp
)

target_include_directories(mxslc_lib
        PUBLIC  "${CMAKE_SOURCE_DIR}/include"
        PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}"
)

target_link_libraries(mxslc_lib
        PUBLIC mtlx_lib
)
